--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -16,35 +16,37 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/menu_screenOFF"
-            android:layout_width="wrap_content"
+            android:layout_width="93dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
-            android:layout_column="0"
-            android:layout_gravity="fill"
             android:layout_rowWeight="1"
+            android:layout_column="0"
             android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="8dp"
+            android:layout_gravity="fill"
+            android:layout_margin="30dp"
             android:elevation="8dp"
+            app:cardCornerRadius="8dp"
             app:cardPreventCornerOverlap="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:background="@drawable/gradient_button"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/ic_baseline_power_settings_new_24"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_baseline_power_settings_new_24" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:text="Screen Off"
-                    android:textStyle="bold"
-                    android:layout_gravity="center_horizontal" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -58,7 +60,7 @@
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="8dp"
+            android:layout_margin="30dp"
             app:cardCornerRadius="8dp"
             android:elevation="8dp"
             app:cardPreventCornerOverlap="false">
@@ -93,7 +95,7 @@
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="8dp"
+            android:layout_margin="30dp"
             app:cardCornerRadius="8dp"
             android:elevation="8dp">
 
@@ -130,7 +132,7 @@
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="8dp"
+            android:layout_margin="30dp"
             app:cardCornerRadius="8dp"
             android:elevation="8dp">
 
@@ -166,7 +168,7 @@
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_margin="8dp"
+            android:layout_margin="30dp"
             app:cardCornerRadius="8dp"
             android:elevation="8dp">
 
@@ -176,13 +178,13 @@
                 android:orientation="vertical"
                 android:background="@drawable/gradient_button"
                 android:gravity="center_vertical">
+
                 <ImageView
                     android:id="@+id/trailerTire"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/ic_baseline_shutter_speed_24"
                     android:layout_gravity="center"
-                    />
+                    android:src="@drawable/ic_baseline_shutter_speed_24" />
                 <TextView
                     android:id="@+id/tvTrailer"
                     android:layout_width="wrap_content"
