--- a/app/src/main/res/layout/activity_trailer_tire.xml
+++ b/app/src/main/res/layout/activity_trailer_tire.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     android:background="@drawable/gradient_colour"
-    tools:context=".MainActivity">
+    tools:context=".View.MainActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
