--- a/app/src/main/res/layout/activity_keypad.xml
+++ b/app/src/main/res/layout/activity_keypad.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:background="@drawable/gradient_colour"
-    tools:context=".MainActivity">
+    tools:context=".View.MainActivity">
 
     <RelativeLayout
         android:layout_width="260dp"
